@startuml Camera Service Main Classes Diagram

skinparam linetype ortho

package camera_service {
  package common {
    interface ICameraCapabilities {
      + setZoom(zoom_level: types::zoom): Result<void>
      + getZoom(): Result<types::zoom>
      + setFocus(focus_value: types::focus): Result<void>
      + getFocus(): Result<types::focus>
    }
  }

  package api {
    class ApiController {
      - request_handler_: std::shared_ptr<IRequestHandler>
      - transport_: std::unique_ptr<ITransport>
      - server_address_: std::string
      - running_: std::atomic<bool>
      - service_thread_: std::jthread
      + ApiController(std::shared_ptr<IRequestHandler>, std::unique_ptr<ITransport>, const std::string&)
      + startAsync(): Result<void>
      + stop(): Result<void>
      + isRunning(): bool
    }

    interface IRequestHandler {
      + start(): Result<void>
      + stop(): Result<void>
      + isRunning(): bool
    }

    class RequestHandler {
      - core_: std::unique_ptr<core::ICore>
      - running_: std::atomic<bool>
      + RequestHandler(std::unique_ptr<core::ICore>)
      + startAsync(): Result<void>
      + stop(): Result<void>
      + isRunning(): bool
      + setZoom(zoom_level: types::zoom): Result<void>
      + getZoom(): Result<types::zoom>
      + setFocus(focus_value: types::focus): Result<void>
      + getFocus(): Result<types::focus>
    }

    interface ITransport {
      + start(server_address: std::string): Result<void>
      + stop(): Result<void>
      + runLoop(): Result<void>
    }

    class GrpcTransport {
      - server_: std::unique_ptr<grpc::Server>
      - callback_handler_: std::unique_ptr<GrpcCallbackHandler>
      + GrpcTransport(request_handler: std::shared_ptr<IRequestHandler>)
      + start(server_address: std::string): Result<void>
      + stop(): Result<void>
      + runLoop(): Result<void>
    }

    class GrpcCallbackHandler {
      - request_handler_: std::shared_ptr<IRequestHandler>
      + GrpcCallbackHandler(std::shared_ptr<IRequestHandler>)
      + SetZoom(context: grpc::CallbackServerContext*, request: camera::SetZoomRequest*, response: camera::SetZoomResponse*): grpc::ServerUnaryReactor*
      + SetFocus(context: grpc::CallbackServerContext*, request: camera::SetFocusRequest*, response: camera::SetFocusResponse*): grpc::ServerUnaryReactor*
      + GetZoom(context: grpc::CallbackServerContext*, request: camera::GetZoomRequest*, response: camera::GetZoomResponse*): grpc::ServerUnaryReactor*
      + GetFocus(context: grpc::CallbackServerContext*, request: camera::GetFocusRequest*, response: camera::GetFocusResponse*): grpc::ServerUnaryReactor*
    }

    class ApiControllerFactory {
      + {static} createApiController(controller_type: std::string, server_address: std::string, core: std::unique_ptr<ICore>): std::unique_ptr<ApiController>
    }
  }

  package core {
    interface ICore {
      + initialize(): Result<void>
      + shutdown(): Result<void>
    }

    class Core {
      - camera_: std::unique_ptr<infrastructure::ICameraHal>
      + Core(std::unique_ptr<infrastructure::ICameraHal>)
      + initialize(): Result<void>
      + shutdown(): Result<void>
      + setZoom(zoom_level: types::zoom): Result<void>
      + getZoom(): Result<types::zoom>
      + setFocus(focus_value: types::focus): Result<void>
      + getFocus(): Result<types::focus>
    }

    class CoreFactory {
      + {static} createCore(camera_type: std::string, std::unique_ptr<infrastructure::ICameraHal> camera): std::unique_ptr<ICore>
    }
  }

  package data {
    interface ICameraHal {
      + connect(): Result<void>
      + disconnect(): Result<void>
    }

    class CameraHal  {
      - camera_hw_: std::unique_ptr<ICameraHw>
      - limits_: CameraLimits
      - connected_: bool
      + CameraHal (std::unique_ptr<ICameraHw>)
      + setZoom(zoom_level: types::zoom): Result<void>
      + getZoom(): Result<types::zoom>
      + setFocus(focus_value: types::focus): Result<void>
      + getFocus(): Result<types::focus>
      + connect(): Result<void>
      + disconnect(): Result<void>
      + isConnected(): bool
      - isValidZoom(value: types::zoom): bool
      - isValidFocus(value: types::focus): bool
    }

    interface ICameraHw {
      + connect(): Result<void>
      + disconnect(): Result<void>
      + getLimits(): CameraLimits
    }

    class NfovCameraHw {
      - limits_: CameraLimits
      + NfovCameraHw()
      + setZoom(zoom_level: types::zoom): Result<void>
      + getZoom(): Result<types::zoom>
      + setFocus(focus_value: types::focus): Result<void>
      + getFocus(): Result<types::focus>
      + connect(): Result<void>
      + disconnect(): Result<void>
      + getLimits(): CameraLimits
    }

    class CameraFactory {
      + {static} createCamera(camera_type: std::string): std::unique_ptr<ICameraHal>
    }
  }

  package apps {
    class main {
      // Main application entry point
    }
  }
}

' Relationships
ApiController o-- IRequestHandler
ApiController o-- ITransport
ApiControllerFactory ..> ApiController: creates >
ApiControllerFactory ..> GrpcTransport: creates >
ApiControllerFactory ..> RequestHandler: creates >
ApiControllerFactory ..> ICore: uses >

RequestHandler --|> IRequestHandler
RequestHandler o-- ICore

GrpcTransport --|> ITransport
GrpcTransport o-- IRequestHandler
GrpcTransport o-- GrpcCallbackHandler

GrpcCallbackHandler o-- IRequestHandler

Core --|> ICore
Core o-- ICameraHal

ICameraHal --|> ICameraCapabilities
ICameraHw --|> ICameraCapabilities
ICore --|> ICameraCapabilities
IRequestHandler --|> ICameraCapabilities

CameraHal  --|> ICameraHal
CameraHal  o-- ICameraHw

NfovCameraHw --|> ICameraHw

CoreFactory ..> Core: creates >
CoreFactory ..> ICameraHal: uses >

CameraFactory ..> CameraHal : creates >
CameraFactory ..> NfovCameraHw: creates >

main ..> CameraFactory: creates >
main ..> CoreFactory: creates >
main ..> ApiControllerFactory: creates >

@enduml